@startuml
' Diagrama Entidad-Relación (ER) - Vista de Datos ProAula

entity "User" as user {
  * _id : ObjectId
  * name : string
  * lastname : string
  * email : string
  * password : string
  * socialMedia : string[]
  * isFreelancer : boolean
  * idioma : string[]
  * experiencia : string
  * categoria : string[]
}

entity "Project" as project {
  * _id : ObjectId
  * userId : ObjectId
  * name : string
  * techs : string[]
  * description : string
  * dateInit : Date
  * dateEnd : Date
  * salary : number
  * status : string
}

entity "Proposal" as proposal {
  * _id : ObjectId
  * status : string
  * userId : ObjectId
  * projectId : ObjectId
  * nameProject : string
  * userName : string
  * userEmail : string
  * salary : number
  * days : number
}

user ||--o{ project : "crea"
user ||--o{ proposal : "envía"
project ||--o{ proposal : "recibe"

@enduml
